docs/3.5/readme.md
| Toolset | Name | Alias | Description |
| --- | --- | --- | --- |
| Utility Network | [AddUNSystemTables](./AddUNSystemTables.html) | Create Utility Network System Tables Views | Generate views on the utility network system tables. |
| Map | [AdjustDataSources](./AdjustDataSources.html) | Update Data Sources | Use this tool to convert the data source of layers in the maps in the current ArcGIS Pro project to a workspace. |
| Asset Package | [ApplyNetworkCopyingWorkbook](./ApplyNetworkCopyingWorkbook.html) | Apply Utility Network Copy Workbook | Add the Asset Group/Types listed in the workbook from the Source Asset Package to the Target Asset Package |
| Utility Network | [AssociationSelection](./AssociationSelection.html) | Select by Association | Expands the current selection in the map based on specified utility network association types and layers. |
| Utility Network | [BatchTrace](./BatchTrace.html) | Batch Trace | Iterate through the starting points to trace the utility network and use the results. |
| Utility Network | [BuildStartingPoints](./BuildStartingPoints.html) | Build Starting Points | Creates starting points based on a trace configuration. |
| APR | [CalculateTolerances](./CalculateTolerances.html) | Calculate Tolerances and Resolutions | Calculate the XY, Z, and M tolerances based on a measure unit for systems that will use a linear referencing system (LRS). |
|  | [ChangeGDBSpatialReference](./ChangeGDBSpatialReference.html) | Change GDB Spatial Reference | Creates a new file geodatabase in the user-specified spatial reference. |
| Schema | [CombineClasses](./CombineClasses.html) | Combine Classes | Combine a series of classes into a single non-subtyped class |
| Asset Package | [CompareConfigurations](./CompareConfigurations.html) | Asset Package Configuration Report | Generates a collection of Excel Workbooks/Sheets to review the various Asset Package configuration options. |
| Asset Package | [CompareRenames](./CompareRenames.html) | Asset Package Rename Report | Generates a collection of Excel Workbooks/Sheets to review the various Asset Package rename options. |
| Utility Network | [Config2Trace](./Config2Trace.html) | Trace Configurations to Files | Converts Trace Configurations to a series of files |
| Map | [ConfigureUtilityNetworkLayers](./ConfigureUtilityNetworkLayers.html) | Configure UN Layers | Configures utility network layers by modifying popups and display filters. |
| Contingent Values | [ContingentValueWorkbookToCSV](./ContingentValueWorkbookToCSV.html) | Convert Contingent Values Workbook | Converts a Contingent Values Workbook to CSV files to be used for importing. |
| Schema | [CopyFieldsAndDomains](./CopyFieldsAndDomains.html) | Copy Fields and Domains | Copies fields and domains from FeatureClass/Table to FeatureClass/Table |
| Data Migration | [CopyFieldsAndDomainsFromMapping](./CopyFieldsAndDomainsFromMapping.html) | Copy Fields and Domains From Mapping | Copies fields and domains from FeatureClass/Table to FeatureClass/Table defined in the mapping worksheet. |
| Utility Network | [CreateAssociationLines](./CreateAssociationLines.html) | Create Association Lines | Creates lines representing utility network associations. |
| Contingent Values | [CreateContingentValueAttributeRules](./CreateContingentValueAttributeRules.html) | Contingent Values to Attribute Rules | Create a series of attribute rules from the Contingent Values. |
| Contingent Values | [CreateContingentValues](./CreateContingentValues.html) | Create Contingent Values | Creates contingent values from schema or data. |
| Contingent Values | [CreateContingentValuesWorkbook](./CreateContingentValuesWorkbook.html) | Create Contingent Values Workbook | Creates an Excel workbook to review and modify contingent values defined by data, schema or existing values. |
| Data Migration | [CreateMigrationWorkspace](./CreateMigrationWorkspace.html) | Create Migration Workspace | This tool is used to create a data model and data loading workspace suitable for use with the Data Loading tool. |
| Asset Package | [CreateNetworkCopyingWorkbook](./CreateNetworkCopyingWorkbook.html) | Create Utility Network Copy Workbook | Create an Excel workbook with the properties of the Source Asset Package that can be copied into the Target Asset Package |
| Subset | [CreateQuadTrees](./CreateQuadTrees.html) | Create Quadtrees | Creates quadtrees from a collection of input features. |
| Data Migration | [CreateSimpleDataMapping](./CreateSimpleDataMapping.html) | Create Simple Data Mapping | This tool creates a spreadsheet you can use to map your current geodatabase schema to the schema of an asset package for a utility network. |
| Utility Network | [CreateUNTerminalContingentValues](./CreateUNTerminalContingentValues.html) | Create Terminal Contingent Values | Creates contingent values for Utility Network terminal fields. |
| APR | [EnableLRSUPDM](./EnableLRSUPDM.html) | Enable APR on UPDM | Creates the script to enable LRS or enables LRS on a UPDM database with a utility network. |
| Subset | [EvaluateRulesByPolygon](./EvaluateRulesByPolygon.html) | Evaluate Rules by Polygon | Runs the Evaluate Rules Geoprocessing tool for every input polygon. |
|  | [ExportReportingData](./ExportReportingData.html) | Export Reporting Data | Exports tables with domain descriptions to an output geodatabase. |
| Matrix | [ExportUtilityNetworkMatrix](./ExportUtilityNetworkMatrix.html) | Export Matrix | Creates Excel workbooks for visualizing and modifying Utility Network rules, categories, association roles, and terminal assignments. |
|  | [ExtractFileLogs](./ExtractFileLogs.html) | Extract Logs from Files | Generates a Mobile GDB with a record for each entry in a log file. |
|  | [ExtractRESTLogs](./ExtractRESTLogs.html) | Extract Logs from REST | Extracts logs from ArcGIS Server. |
| Map | [FilterMap](./FilterMap.html) | Modify Map by Rename and Configure | Applies rename and configuration options to maps based on an asset package. |
| Utility Network | [FindCommonAncestors](./FindCommonAncestors.html) | Find Common Ancestor | Iterate through the starting points to trace the utility network and find the common features. |
| Matrix | [ImportUtilityNetworkMatrix](./ImportUtilityNetworkMatrix.html) | Import Matrix | Loads the values from the rule, network category, and terminal assignment workbooks. |
| Asset Package | [LifecycleToAssetStateRule](./LifecycleToAssetStateRule.html) | Add Lifecycle to Asset State Attribute Rule | Generated an Attribute Rule and calculate the Asset State from the Asset Lifecycle Values in the asset package. |
| Map | [MapLayersToCSV](./MapLayersToCSV.html) | Map Layers to CSV | Use this tool to create a csv report with field information from your tables and layers. |
| Map | [SetFieldPropsFromCSV](./SetFieldPropsFromCSV.html) | Set Field Properties from CSV | Set a field's alias and other field properties for layers and tables. |
| Utility Network | [SubnetworkAggregator](./SubnetworkAggregator.html) | Subnetwork Aggregator | This tools generates aggregated geometry and asset summaries for the subnetworks in an utility network.  This can be used to generated subnetwork geometry for subnetworks who currently have error rows. The results will include the currently connected features up to the location where errors are present. |
| Schema | [SubtypesToClasses](./SubtypesToClasses.html) | Convert Subtypes to Classes | Convert each subtype of a class to a class. |
|  | [SummarizeAttributeRules](./SummarizeAttributeRules.html) | Report and Summarize Attribute Rules | Generates a Mobile GDB that has a report of all the attribute rules in the workspace. |
| Utility Network | [SummarizeUNErrors](./SummarizeUNErrors.html) | Summarize Utility Network Errors | Generates a Mobile GDB summarizing utility network errors and data inconsistencies |
|  | [SummaryByBits](./SummaryByBits.html) | Summary by Bits | Splits the specified attributes by the specified bits present and generates data for reporting. |
| Data Manipulation | [SwapBits](./SwapBits.html) | Swap Bits | Evaluates the values of an integer field as a bit gate and swaps bit values. |
| Asset Package | [SyncAssetPackageDataTables](./SyncAssetPackageDataTables.html) | Sync the C Tables Asset Group/Type | Sync the Asset Group and Asset Type of the Asset Package data tables to the domain tables. |
| Utility Network | [Trace2Config](./Trace2Config.html) | Trace to Trace Configurations | Converts arcpy.un.Trace to arcpy.un.ImportTraceConfigurations |
| Utility Network | [TraceFilesToGeodatabase](./TraceFilesToGeodatabase.html) | Trace Results To Geodatabase | Converts the JSON files from a Utility Network trace to a geodatabase. |
| Asset Package | [TransferUtilityNetworkData](./TransferUtilityNetworkData.html) | Transfer Utility Network Data | Merge the data from one or more asset packages to an asset package or utility network. |
| Subset | [ValidateByPolygon](./ValidateByPolygon.html) | Validate by Polygon | Runs the Validate Network Topology Geoprocessing tool for every input polygon. |

`Last built 2026-03-30`
